# experimental-tools

./: .gitignore  activation.py  cross_entropy.py  loss.py  manualNN.py
cpp-forntend/: CMakeLists.txt  backprop_ninja.cpp  cpp-forntend.cpp
cpp-forntend/include/: utils.h
cpp-forntend/models/: network.h
cpp-forntend/utils/: tools.cu  tools.cuh  utils.h
utils/: RMSNorm.cpp  alignmemory.cpp  autograd.py  cholesky.cpp  ddpModel.py  ddpmodel.py  fine-tune.py  ggml_demo.py  gguf_struct.py  gptq.py  hfquant.py  layernorm.c  layernorm.py  lora.py  loss.py  matmul.cu  mpModel.py  ompPractice.cpp  pin_memory.py  ppl.py  quantization.py  simpleORT.py  smoothquant.py  softmax.c  softmax.cu  softmax.py  tools.py  triton_benckmark.py  triton_example.py
utils/compile/: ptx_demonstration.cpp1.ii  ptx_demonstration.cu  ptx_demonstration.ptx  ptx_demonstration.sm_52.cubin
